# scholialang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: publish.yml  spec-conformance.yml  test.yml
scripts/: run_spec_conformance.py
src/scholialang/: __init__.py  _proofchain.py  _proofdag.py  atoms.py  criticality.py  effects.py  parser.py  prelude.py  registry.py  renderer.py  serializer.py  stable_ids.py  test_ownership.py  validator.py  verification_dag.py
tests/: conftest.py  test_atom_catalog_v05.py  test_validator_v05.py
tests/fixtures/: canonical_id_golden.json  v04_trace.xml  v05_trace.xml
tests/fixtures/scholia/: criticality.yaml
tests/fixtures/scholia/effects_sample_modules/: io_write_module.py  mutates_state_module.py  network_module.py  pure_module.py  subprocess_module.py
tests/fixtures/validator/: mixed_all_hard_fails.xml  mixed_clean_complex.xml  mixed_criticality_and_action.xml  mixed_retract_bypass.xml  mixed_three_warnings.xml  mixed_two_hard_fails.xml  v04_backcompat.xml
tests/integration/scholia/: test_corpus_replay.py
tests/unit/scholia/: test_atoms.py  test_atoms_canonical_sets.py  test_canonical_id_golden.py  test_concluding_status.py  test_criticality_manifest.py  test_effects_detector.py  test_parser.py  test_prelude_recovery_modes.py  test_public_hygiene.py  test_renderer.py  test_serializer.py  test_stable_ids.py  test_test_ownership_resolver.py  test_v06_canonical.py  test_validator.py  test_validator_v031.py  test_validator_v04B.py  test_validator_v04C.py  test_validator_v04D.py  test_validator_v05.py  test_validator_v06.py
