[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholialang"
version = "0.6.0"
description = "Reference implementation for the Scholia structured reasoning language"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Doug Fir Labs"}]
dependencies = [
    "pyyaml>=6.0",
]
keywords = ["scholia", "srml", "reasoning", "agents", "validation"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[project.urls]
Homepage = "https://github.com/dougfirlabs/scholialang"
Repository = "https://github.com/dougfirlabs/scholialang"
Specification = "https://github.com/dougfirlabs/scholialang-spec"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
timeout = 10
timeout_method = "signal"
