[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholialang"
version = "0.6.0"
description = "Scholia reference implementation (parser, validator, core primitives): helps agentic systems preserve reasoning state, use tools without quality loss, and reduce context cost across long-horizon work"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [{name = "Doug Fir Labs"}]
dependencies = [
    "pyyaml>=6.0",
]
keywords = ["scholia", "srml", "reasoning", "agents", "validation"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[project.urls]
Homepage = "https://github.com/dougfirlabs/scholialang"
Repository = "https://github.com/dougfirlabs/scholialang"
Specification = "https://github.com/dougfirlabs/scholialang-spec"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
timeout = 10
timeout_method = "signal"
